--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
 }
 .card {
     max-width: 384px;
-    padding: 24px;
+    padding: 36px;
     background-color: var(--gray-800);
     display: flex;
     flex-direction: column;
@@ -42,7 +42,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
+    gap: 20px;
 }
 .card-header img {
     width: 96px;
@@ -50,4 +50,66 @@ body {
     border-radius: 50%;
     object-fit: cover;
     object-position: top;
+}
+.card .card-header .card-header--title{
+    text-align: center;
+}
+.card .card-header .card-header--title h2{
+    color: var(--white);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 150%;
+    margin-bottom: 6px;
+}
+
+.card .card-header .card-header--title h3{
+    color: var(--green);
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 150%;
+}
+
+.card .card-header h4{
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 150%;
+}
+.card-body{
+    width: 100%;
+}
+.card-body ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.card-body ul li a {
+    padding: 6px 0;
+    display: inline-block;
+    color: var(--white);
+    background-color: var(--gray-700);
+    width: 100%;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 150%;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    text-align: center;
+    border-radius: 10px;
+}
+.card-body ul li a:hover {
+    background-color: var(--green);
+    color: var(--gray-900);
+}
+
+@media only screen and (max-width: 375px) {
+    .card {
+        padding: 20px;
+        max-width: 350px;
+    }
+    .h4{
+        font-size: 12px;
+    }
 }
